abstract_client.h
@@ -425,6 +425,7 @@ public:
         PositionBottomRight    = PositionRight | PositionBottom
     };
     Position titlebarPosition() const;
+    bool titlebarPositionUnderMouse() const;
 
     // a helper for the workspace window packing. tests for screen validity and updates since in maximization case as with normal moving
     void packTo(int left, int top);
